update benchmarker
